# Hackathon2-Phase4

./: .dockerignore  .gitignore  GEMINI.md  logs.txt
.gemini/tmp/: feature_description.md  jwt_auth_feature_description.md  temp_create_feature.ps1  temp_plan.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  update-agent-context.ps1
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  main.py  mcp_tools.py  support_agent.py
chatbot-chart/: values.yaml
chatbot-chart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chatbot-chart/templates/tests/: test-connection.yaml
frontend/: .prettierignore
frontend/app/: layout.tsx
frontend/components/chatkit-ui/: ChatkitWrapper.tsx
history/prompts/009-add-backend-dockerfile/: 1-create-backend-dockerfile-spec.spec.prompt.md  2-generate-plan-for-backend-dockerfile.plan.prompt.md  3-generate-tasks-for-backend-dockerfile.tasks.prompt.md
specs/009-add-backend-dockerfile/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-add-backend-dockerfile/checklists/: requirements.md
