[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatkit>=0.0.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "openai-agents>=0.6.3",
    "openai-chatkit>=1.4.0",
    "psycopg2>=2.9.11",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.27",
]
